# ImageRetrieval

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ImageRetrievalCpp  Makefile  README.md  cmake_install.cmake  compute_ap.sh  compute_map  compute_map.cpp  configurations.h  extractAll.cpp  init.sh  initialize.h  local_configurations.h  main.cpp  runserver.h  temp.mat  test.h
app/: app_data.h  appdata.h
data/: app_data.h
extract/: extract.h
quantize/: quantize.h
query/: query.h
utils/: distance.h  geometric_verification.h  inverted_index.h  invertedindex.h  score.h  utils.h
utils/compute_ap/: compute_ap.cpp
utils/hesaff/: hesaff.cpp  perdoch.h  pyramid.cpp  pyramid.h  siftdesc.h
